Фикс wow анимации (моргание при загрузке)

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -533,6 +533,10 @@ input[type="submit"] {
           animation-fill-mode: forwards;
 }
 
+.wow {
+  visibility: hidden;
+}
+
 body {
   font-family: 'Harmonia', sans-serif;
   color: #74839c;
