Иимя переменной и фиксированный фон в первом экране

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -606,6 +606,7 @@ body {
 
 .main-header {
   background: url("../img/header-bg.png") no-repeat top center;
+  background-attachment: fixed;
   background-size: cover;
   color: #ffffff;
 }
