--- a/app/sass/_main.sass
+++ b/app/sass/_main.sass
@@ -62,6 +62,7 @@ body
 
 .main-header
   background: url('../img/header-bg.png') no-repeat top center
+  background-attachment: fixed
   background-size: cover
   color: #ffffff
 
